# packs-rs

./: CHANGELOG.md  Cargo.toml  README.md
packs/: Cargo.toml  LICENSE  README.md
packs-proc/: Cargo.toml  README.md
packs-proc/src/: common.rs  lib.rs  pack.rs  pack_unpack.rs  packable_struct.rs  packable_struct_sum.rs  unpack.rs
packs-proc/src/common/: enums.rs
packs/src/: error.rs  lib.rs  ll.rs  packable.rs  std_structs.rs  structure.rs  utils.rs  value.rs
packs/src/ll/: bitops.rs  bounds.rs  marker.rs  types.rs
packs/src/ll/types/: fixed.rs  lengths.rs  sized.rs
packs/src/std_structs/: date.rs  date_time.rs  date_time_zone_id.rs  duration.rs  local_date_time.rs  local_time.rs  node.rs  path.rs  point2d.rs  point3d.rs  relationship.rs  time.rs  unbound_relationship.rs
packs/src/structure/: generic_struct.rs  packable_struct.rs  struct_sum.rs
packs/src/value/: bytes.rs  dictionary.rs
packs/tests/: derive_custom.rs  derive_generic.rs
