[package]
name = "packs-proc"
version = "0.2.0"
authors = ["Philipp Pfeiffer <pfiff@posteo.de>"]
edition = "2018"
license-file = "LICENSE"
homepage = "https://github.com/aphorisme/packs-rs"
description = "Derive macros for packs-rs"
repository = "https://github.com/aphorisme/packs-rs"
keywords = ["bolt", "packing", "serialization", "packstream", "neo4j"]

[lib]
proc-macro = true

[dependencies]
syn = "^1.0.38"
quote = "^1.0.7"
proc-macro2 = "^1.0.24"
