[package]
name = "packs"
version = "0.1.0"
authors = ["Philipp Pfeiffer <pfiff@posteo.de>"]
edition = "2018"

[dependencies]
byteorder = "1.3.4"
thiserror = "1.0.20"
packs-proc = { path = "../packs-proc", optional = true }

[features]
default = ["std_structs"]
std_structs = ["derive"]
derive = ["packs-proc"]


[dev-dependencies]
packs-proc = { path = "../packs-proc" }
