[package]
name = "packs"
version = "0.1.0"
authors = ["Philipp Pfeiffer <pfiff@posteo.de>"]
edition = "2018"
license-file = "LICENSE"
homepage = "https://github.com/aphorisme/packs-rs"
description = "A PackStream implementation written in Rust"
repository = "https://github.com/aphorisme/packs-rs"
keywords = ["bolt", "packing", "serialization", "packstream", "neo4j"]

[dependencies]
byteorder = "^1.3.4"
thiserror = "^1.0.20"
packs-proc = { version = "0.1.0", optional = true }
# packs-proc = { path = "../packs-proc", optional = true }

[features]
default = ["std_structs"]
std_structs = ["derive"]
derive = ["packs-proc"]